edited added quit context

--- a/py_spark/factorial.ipynb
+++ b/py_spark/factorial.ipynb
@@ -1,17 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Context"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark import SparkContext, SparkConf\n",
+    "from pyspark.sql import SparkSession, SQLContext\n",
     "\n",
-    "conf = SparkConf()\n",
-    "sc   = SparkContext(conf = conf)"
+    "spark = (SparkSession.builder\n",
+    "         .master(\"local\")\n",
+    "         .appName(\"Factorial\")\n",
+    "         .getOrCreate())\n",
+    "\n",
+    "sc = spark.sparkContext"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Factorial Solution 1"
    ]
   },
   {
@@ -35,6 +51,50 @@
     "\n",
     "product = integerRDD.reduce(lambda x, y: x * y)\n",
     "print(f\"{INPUT}! = {product}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Factorial Solution 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8! = 5040\n"
+     ]
+    }
+   ],
+   "source": [
+    "integerRDD = sc.range(1, 8, 1, numSlices=4)\n",
+    "product = integerRDD.reduce(lambda x, y: x * y)\n",
+    "print(f\"{INPUT}! = {product}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quit Context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sc.stop()"
    ]
   },
   {
