--- a/py_spark/modeling.ipynb
+++ b/py_spark/modeling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -31,8 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "spark = (SparkSession.builder\n",
@@ -54,114 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_pandas = pd.read_csv(\"/Users/pbezuhov/git/Kaggle/data/house_prices/train.csv\", nrows=10)\n",
     "df = sql_sc.read.csv(\"/Users/pbezuhov/git/Kaggle/data/house_prices/train.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 10 entries, 0 to 9\n",
-      "Data columns (total 81 columns):\n",
-      "Id               10 non-null int64\n",
-      "MSSubClass       10 non-null int64\n",
-      "MSZoning         10 non-null object\n",
-      "LotFrontage      9 non-null float64\n",
-      "LotArea          10 non-null int64\n",
-      "Street           10 non-null object\n",
-      "Alley            0 non-null float64\n",
-      "LotShape         10 non-null object\n",
-      "LandContour      10 non-null object\n",
-      "Utilities        10 non-null object\n",
-      "LotConfig        10 non-null object\n",
-      "LandSlope        10 non-null object\n",
-      "Neighborhood     10 non-null object\n",
-      "Condition1       10 non-null object\n",
-      "Condition2       10 non-null object\n",
-      "BldgType         10 non-null object\n",
-      "HouseStyle       10 non-null object\n",
-      "OverallQual      10 non-null int64\n",
-      "OverallCond      10 non-null int64\n",
-      "YearBuilt        10 non-null int64\n",
-      "YearRemodAdd     10 non-null int64\n",
-      "RoofStyle        10 non-null object\n",
-      "RoofMatl         10 non-null object\n",
-      "Exterior1st      10 non-null object\n",
-      "Exterior2nd      10 non-null object\n",
-      "MasVnrType       10 non-null object\n",
-      "MasVnrArea       10 non-null int64\n",
-      "ExterQual        10 non-null object\n",
-      "ExterCond        10 non-null object\n",
-      "Foundation       10 non-null object\n",
-      "BsmtQual         10 non-null object\n",
-      "BsmtCond         10 non-null object\n",
-      "BsmtExposure     10 non-null object\n",
-      "BsmtFinType1     10 non-null object\n",
-      "BsmtFinSF1       10 non-null int64\n",
-      "BsmtFinType2     10 non-null object\n",
-      "BsmtFinSF2       10 non-null int64\n",
-      "BsmtUnfSF        10 non-null int64\n",
-      "TotalBsmtSF      10 non-null int64\n",
-      "Heating          10 non-null object\n",
-      "HeatingQC        10 non-null object\n",
-      "CentralAir       10 non-null object\n",
-      "Electrical       10 non-null object\n",
-      "1stFlrSF         10 non-null int64\n",
-      "2ndFlrSF         10 non-null int64\n",
-      "LowQualFinSF     10 non-null int64\n",
-      "GrLivArea        10 non-null int64\n",
-      "BsmtFullBath     10 non-null int64\n",
-      "BsmtHalfBath     10 non-null int64\n",
-      "FullBath         10 non-null int64\n",
-      "HalfBath         10 non-null int64\n",
-      "BedroomAbvGr     10 non-null int64\n",
-      "KitchenAbvGr     10 non-null int64\n",
-      "KitchenQual      10 non-null object\n",
-      "TotRmsAbvGrd     10 non-null int64\n",
-      "Functional       10 non-null object\n",
-      "Fireplaces       10 non-null int64\n",
-      "FireplaceQu      8 non-null object\n",
-      "GarageType       10 non-null object\n",
-      "GarageYrBlt      10 non-null int64\n",
-      "GarageFinish     10 non-null object\n",
-      "GarageCars       10 non-null int64\n",
-      "GarageArea       10 non-null int64\n",
-      "GarageQual       10 non-null object\n",
-      "GarageCond       10 non-null object\n",
-      "PavedDrive       10 non-null object\n",
-      "WoodDeckSF       10 non-null int64\n",
-      "OpenPorchSF      10 non-null int64\n",
-      "EnclosedPorch    10 non-null int64\n",
-      "3SsnPorch        10 non-null int64\n",
-      "ScreenPorch      10 non-null int64\n",
-      "PoolArea         10 non-null int64\n",
-      "PoolQC           0 non-null float64\n",
-      "Fence            1 non-null object\n",
-      "MiscFeature      2 non-null object\n",
-      "MiscVal          10 non-null int64\n",
-      "MoSold           10 non-null int64\n",
-      "YrSold           10 non-null int64\n",
-      "SaleType         10 non-null object\n",
-      "SaleCondition    10 non-null object\n",
-      "SalePrice        10 non-null int64\n",
-      "dtypes: float64(3), int64(37), object(41)\n",
-      "memory usage: 6.4+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_pandas.info()"
    ]
   },
   {
@@ -173,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -281,19 +183,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql.types import IntegerType, BooleanType, FloatType\n",
+    "# from pyspark.sql.types import IntegerType, BooleanType, FloatType\n",
     "\n",
-    "def convertColumn(df, names, newType):\n",
-    "    for name in names: \n",
-    "        df = df.withColumn(name, df[name].cast(newType))\n",
-    "    return df \n",
+    "# def convertColumn(df, names, newType):\n",
+    "#     for name in names: \n",
+    "#         df = df.withColumn(name, df[name].cast(newType))\n",
+    "#     return df \n",
     "\n",
-    "names = [col for col in df_pandas.columns if df_pandas[col].dtype != object]\n",
-    "df = convertColumn(df, names, FloatType())"
+    "# names = [col for col in df_pandas.columns if df_pandas[col].dtype != object]\n",
+    "# df = convertColumn(df, names, FloatType())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quit Context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sc.stop()"
    ]
   },
   {
