created prime finder in spark

--- a/py_spark/factorial.ipynb
+++ b/py_spark/factorial.ipynb
@@ -9,8 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, SQLContext\n",
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -62,19 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8! = 5040\n"
+      "8! = 40320\n"
      ]
     }
    ],
    "source": [
-    "integerRDD = sc.range(1, 8, 1, numSlices=4)\n",
+    "integerRDD = sc.range(1, INPUT+1, 1, numSlices=4)\n",
     "product = integerRDD.reduce(lambda x, y: x * y)\n",
     "print(f\"{INPUT}! = {product}\")"
    ]
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
